Joint delta-buffer transport diagnostic: rule out transport as bug source
Part A: same-pose comparison shows GPU joints kernel writes match CPU
computation to ~5 sig figs (mean ratio 1.00000, cosine 1.0); structural
check confirms 42000/42000 expected myo slots populated with 0 indexing
leak. Part B 10-seed ensemble routes GPU joint output through cpuForceSum
on the host (bypassing device-side delta sum) and still fails at
bindEvents 439.20 ± 43.95, statistically identical to chained-GPU
baseline 460.80 ± 36.55. The bug is therefore cumulative float32 drift
in the joint+move feedback loop, not the inter-task RMW transport.

Adds Myosin.DIAG_DRY_RUN (gates incForceSum/incTorqueSum so
jointConstraints can populate diag accumulators without corrupting Thing
state) and GPUMoveThing.DIAG_CPU_DELTA_ADD (split jointsOnly+moveOnly
TaskGraphs alongside the chained plan; CPU-side delta add between
execs). All flags default off; production behaviour unchanged.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>